@@ -5,11 +5,11 @@ outdir = '~/tmp'
 
 # list directories to backup as a dict with 1 or 0 values for
 # recursive (or not) descent:
-to_backup = {'~/ipython':1}
+to_backup = {'~/ipython/ipython':1}
 
 # exclude patterns. anything ending in / is considered a directory
-exc_pats = '#*#  *~ *.o *.pyc *.pyo MANIFEST *.pdf *.flc build/ '
-exc_pats += ' homepage/ originals/ backup/ dist/ doc/manual/ doc/manual.lyx '
+exc_pats = '#*#  *~ *.o *.pyc *.pyo MANIFEST *.pdf *.flc build/ dist/ ' \
+' doc/manual/ doc/manual.lyx ChangeLog.* magic.tex *.1.gz '
 
 # final actions after doing the backup
 def final():
@@ -17,6 +17,6 @@ def final():
     version = bq('ipython -V')
     out_tgz = outdir+'/ipython-'+version+'.tgz'
     xsys(itpl('cd $outdir; pwd;tar -czf $out_tgz ipython'),debug=dbg,verbose=1)
-    xsys(itpl('cp $out_tgz /mnt/card/fperez/ipython'),debug=dbg,verbose=1)
+    #xsys(itpl('cp $out_tgz /mnt/card/fperez/ipython'),debug=dbg,verbose=1)
     xsys(itpl('mv $out_tgz ~/ipython/backup'),debug=dbg,verbose=1)
     xsys(itpl('rm -rf ${outdir}/ipython'),debug=dbg,verbose=1)
